# SimpleImageProcessing

./: CMakeLists.txt  README.md
src/: alghorithms.cpp  alghorithms.h  main.cpp
